# extrae

./: Makefile.am  README  configure.ac  installopenacc3pgi20ctepower.sh
config/: openacc.m4
docs/source/: configure-installation.rst
example/LINUX/OPENACC/: extrae.xml  pi.c  run_ldpreload.sh
src/common/: events.c  events.h
src/merger/: Makefile.am
src/merger/common/: semantics.c
src/merger/parallel/: Makefile.am
src/merger/paraver/: labels.c  openacc_prv_events.c  openacc_prv_events.h  openacc_prv_semantics.c  openacc_prv_semantics.h  trace_to_prv.c
src/tracer/: Makefile.am  trace_macros.h  xml-parse.c  xml-parse.h
src/tracer/wrappers/: Makefile.am
src/tracer/wrappers/OPENACC/: Makefile.am  openacc_common.c  openacc_common.h  openacc_probe.c  openacc_probe.h  openacc_wrapper.c  openacc_wrapper.h
tests/functional/tracer/OPENACC/: Makefile.am  extrae.xml  openacc-check.c  opencl-check.sh
